--- a/Contact us/contact.css
+++ b/Contact us/contact.css
@@ -1,9 +1,9 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: 'Gruppo', cursive;
 }
+
 body{
     
 }
@@ -62,7 +62,7 @@ form input, form textarea{
 
 /*neon button*/
 
-a{
+form button{
     position:relative;
     
     color:#fcfeff;
