--- a/nav.css
+++ b/nav.css
@@ -1,45 +1,8 @@
 *{
-    margin:0;
-    padding:0;
-
-}
-body{
-    background-image: url(images/mainbg.jpg);
-    background-attachment: fixed;
-   
-    font-family: 'Gruppo', cursive;
-   
-}
-
-
-
-html{
-    scroll-behavior: smooth;
-
-}
-.header{
-    min-height: 100vh;
-    width: 100%;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    background:linear-gradient(0deg,#000 0%,rgba(0,0,0,0) 100%);
-   
-   
-}
-.back-video{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-}
-@media (max-aspect-ratio: 16/9){
-    .back-video{
-        width: auto;
-        height: auto;
-    }
+    box-sizing: content-box;
 }
 .menu-bar{
+    box-sizing: content-box;
     background: rgb(3, 65, 3);
     text-align: center;
 }
@@ -101,20 +64,4 @@ html{
     margin-top: -40px;
     margin-left: 140px;
     background-color: rgb(0,100,0);
-}
-.text-box{
-    color: #fff;
-    width: 90%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-}
-.text-box h1{
-    font-size: 100px;
-}
-.text-box p{
-    font-size: 40px;
-    margin: 10px 0 40px;
 }
