--- a/src/aboutusmobile/style.css
+++ b/src/aboutusmobile/style.css
@@ -4,7 +4,7 @@ body{
 }
 .us{
 
-   background-color: black;
+   background-image: linear-gradient(rgba(0,0,0,0.7)rgba(0,0,0,0.7), url(img/back1.jpg));
 
 }
 .usheading{
