--- a/src/aboutusmobile/style.css
+++ b/src/aboutusmobile/style.css
@@ -1,7 +1,7 @@
 body{
     
     font-family: 'Gruppo', cursive;
-    background-image: linear-gradient(rgba(0,0,0,0.7)rgba(0,0,0,0.7), url(img/back1.jpg));
+    background: #000;
 }
 .us{
 
