--- a/src/myhome.css
+++ b/src/myhome.css
@@ -17,8 +17,8 @@ html{
 
 }
 .header{
-    min-height: 100vh;
     width: 100%;
+    height: 100vh;
     background-position: center;
     background-size: cover;
     position: relative;
@@ -27,6 +27,7 @@ html{
    
 }
 .back-video{
+    display: block;
     position: absolute;
     right: 0;
     bottom: 0;
